# django-recaptcha-enterprise

./: .gitignore  Dockerfile  MANIFEST.in  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml
captcha/: _compat.py  client.py  decorators.py  fields.py  widgets.py
captcha/templates/captcha/includes/: js_v2_checkbox.html  js_v2_invisible.html  js_v3.html
captcha/tests/: test_client.py  test_fields.py  tests.py
example/: db.sqlite3  manage.py
example/example/: settings.py  urls.py
src/captcha/: __init__.py
src/django-recaptcha-enterprise/locale/el/LC_MESSAGES/: django.po
src/django-recaptcha-enterprise/locale/en/LC_MESSAGES/: django.po
