[tool.poetry]
name = "rapidbounce-pwa"
version = "0.3.0"
description = ""
authors = ["rapidbounce <customer.support@rapidbounce.co>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2"
django-modeltranslation = "0.15.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"